--- a/src/app/core/main-nav/main-nav.component.html
+++ b/src/app/core/main-nav/main-nav.component.html
@@ -27,4 +27,5 @@
     <a class="nav-link" routerLink="/games">Games <span class="sr-only">(current)</span></a>
     <a class="nav-link" routerLink="/compare">Compare <span class="sr-only">(current)</span></a>
     <a href="javascript:void(0);" class="icon" onclick="navbarResponse()">&#9776;</a>
+    <app-search *ngIf="players" [players]="players" (selectedPlayer)="navigateToPlayer($event)"></app-search>
 </nav>
