--- a/src/app/players/player/player.component.html
+++ b/src/app/players/player/player.component.html
@@ -124,8 +124,8 @@
         <mat-spinner *ngIf="!radarLoaded"></mat-spinner>
     </div>
     <div class="card">
-        <canvas [hidden]="!polarAreaLoaded" id="polarAreaChart" width="200" height="200">{{ polarAreaChart }}</canvas>
-        <mat-spinner *ngIf="!polarAreaLoaded"></mat-spinner>
+        <canvas [hidden]="!doughnutLoaded" id="doughnutChart" width="200" height="200">{{ doughnutChart }}</canvas>
+        <mat-spinner *ngIf="!doughnutLoaded"></mat-spinner>
     </div>
 </div>
 
