--- a/src/app/teams/team/team.component.html
+++ b/src/app/teams/team/team.component.html
@@ -129,6 +129,17 @@
   </div>
 </div>
 
+<div class="card-row-2">
+    <div class="card">
+        <canvas [hidden]="!radarLoaded" id="radarChart" width="200" height="200">{{ radarChart }}</canvas>
+        <mat-spinner *ngIf="!radarLoaded"></mat-spinner>
+    </div>
+    <div class="card">
+        <canvas [hidden]="!doughnutLoaded" id="doughnutChart" width="200" height="200">{{ doughnutChart }}</canvas>
+        <mat-spinner *ngIf="!doughnutLoaded"></mat-spinner>
+    </div>
+</div>
+
 <div *ngIf="players">
     <p-dataTable 
         [(value)]="players"
