--- a/src/app/core/home-page/home-page.component.html
+++ b/src/app/core/home-page/home-page.component.html
@@ -1,3 +1,13 @@
-<p>
-  home-page works!
-</p>
+<div>
+  <span class="page-title">Todays Headlines</span> <small>powered by NewsApi.org</small>
+</div>
+<div *ngIf="articles && articles.length > 0" class="card-row-3">
+  <div *ngFor="let article of articles" class="card card__white">
+    <img src="{{ article.urlToImage}}">
+    <div class="article-info">
+      <h3 class="article-title"><a href="{{ article.url }}" target="_blank">{{ article.title }}</a></h3>
+      <p class="article-author">{{ article.author }}</p>
+      <p class="article-description">{{ article.description }}</p>
+    </div>
+  </div>
+</div>
