--- a/src/app/shared/search/search.component.html
+++ b/src/app/shared/search/search.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="compare-select-dropdown">
-  <input matInput placeholder="Player" aria-label="Player" [matAutocomplete]="auto" [formControl]="playerCtrl">
+  <input matInput placeholder="Search" aria-label="Player" [matAutocomplete]="auto" [formControl]="playerCtrl">
   <mat-autocomplete #auto="matAutocomplete">
     <mat-option *ngFor="let player of filteredPlayers | async" [value]="" (onSelectionChange)="selectPlayer($event, player)">
       <span>{{ player.player.FirstName }} {{ player.player.LastName }}</span>
