--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -176,3 +176,9 @@
     transform: translateY(-2px);
     box-shadow: 0 18px 35px rgba(50,50,93,.1), 0 8px 15px rgba(0,0,0,.07);
 }
+
+
+.page-title{
+    font-size: 2em;
+    margin: .67em 0;
+}
