--- a/src/app/players/player/player.component.html
+++ b/src/app/players/player/player.component.html
@@ -63,8 +63,9 @@
 
     <div class="card card__purple">
         <h3>Past Month</h3>
+        <p *ngIf="monthStatsLoaded && gameLogs.length < 1">No Data Available</p>
         <mat-spinner *ngIf="!monthStatsLoaded"></mat-spinner>
-        <div class="stats-season" *ngIf="monthStatsLoaded">
+        <div class="stats-season" *ngIf="monthStatsLoaded && gameLogs.length > 1">
             <div class="row">
                 <div class="col-md-4 stat__big">
                     {{ monthAverages['Pts'].average }} PPG
@@ -116,8 +117,9 @@
 
 <div class="card-row-2">
     <div class="card">
-        <canvas [hidden]="!radarLoaded" id="radarChart" width="200" height="200">{{ radarChart }}</canvas>
+        <canvas [hidden]="!radarLoaded && !radarFailed" id="radarChart" width="200" height="200">{{ radarChart }}</canvas>
         <mat-spinner *ngIf="!radarLoaded"></mat-spinner>
+        <p *ngIf="radarLoaded && radarFailed" style="color: black;">An error occured, please refresh and try again!</p>
     </div>
     <div class="card">
         <canvas [hidden]="!doughnutLoaded" id="doughnutChart" width="200" height="200">{{ doughnutChart }}</canvas>
