--- a/src/app/teams/team/team.component.html
+++ b/src/app/teams/team/team.component.html
@@ -131,8 +131,9 @@
 
 <div class="card-row-2">
     <div class="card">
-        <canvas [hidden]="!radarLoaded" id="radarChart" width="200" height="200">{{ radarChart }}</canvas>
+        <canvas [hidden]="!radarLoaded && !radarFailed" id="radarChart" width="200" height="200">{{ radarChart }}</canvas>
         <mat-spinner *ngIf="!radarLoaded"></mat-spinner>
+        <p *ngIf="radarLoaded && radarFailed" style="color: black;">An error occured, please refresh and try again!</p>
     </div>
     <div class="card">
         <canvas [hidden]="!doughnutLoaded" id="doughnutChart" width="200" height="200">{{ doughnutChart }}</canvas>
