--- a/src/app/players/league-leaders/league-leaders.component.html
+++ b/src/app/players/league-leaders/league-leaders.component.html
@@ -1,10 +1,10 @@
 <span class="page-title">League Leaders</span>
-<div *ngIf="leagueLeadersLoaded" class="card-row-3">
+<div *ngIf="leagueLeadersLoaded && !loadingFail" class="card-row-3">
   <div *ngFor="let key of arrayOfKeys" class="card card__white">
     <h3>{{ leagueLeaders[key]['title'] }}</h3>
     <ol class="league-leader-list">
       <li *ngFor="let player of leagueLeaders[key]">
-        <span class="player-name">{{ player.player.FirstName }} {{ player.player.LastName }}</span>
+        <span class="player-name"><a [routerLink]="['/players', player.player.git bID]">{{ player.player.FirstName }} {{ player.player.LastName }}</a></span>
         <span class="player-stat">{{ player.stats[leagueLeaders[key]['stat']]['#text'] }}</span>
       </li>
     </ol>
