--- a/src/app/compare/player-compare/player-compare.component.html
+++ b/src/app/compare/player-compare/player-compare.component.html
@@ -2,6 +2,7 @@
 <div *ngIf="players.length == 2">
     <p-dataTable 
         [(value)]="players"
+        [responsive]="true"
     >
       <p-column header="Player" >
         <ng-template let-player="rowData" pTemplate="body">
