--- a/src/app/core/home-page/home-page.component.html
+++ b/src/app/core/home-page/home-page.component.html
@@ -11,4 +11,7 @@
     </div>
   </div>
 </div>
+<div *ngIf="articles && articles.length == 0">
+  <p>No articles found, please check again later!</p>
+</div>
 <app-game-list-date [date]='todaysDate' [title]="'Todays Games'"></app-game-list-date>
